// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[components] <ReleaseListing /> renders correctly with all props 1`] = `
<article
  class="ReleaseListing"
>
  <a
    href="/releases/slug"
  >
    <div
      class="ReleaseListing-details"
    >
      <header
        class="ReleaseListing-header"
      >
        <h3>
          <span>
            title
          </span>
        </h3>
      </header>
      <section
        class="ReleaseListing-meta"
      >
        <div
          class="Meta ReleaseListing-releasedOn"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m31.6 33.4v-18.4h-23.2v18.4h23.2z m0-26.8c1.8 0 3.4 1.6 3.4 3.4v23.4c0 1.8-1.6 3.2-3.4 3.2h-23.2c-1.9 0-3.4-1.4-3.4-3.2v-23.4c0-1.8 1.5-3.4 3.4-3.4h1.6v-3.2h3.4v3.2h13.2v-3.2h3.4v3.2h1.6z m-3.2 11.8v3.2h-3.4v-3.2h3.4z m-6.8 0v3.2h-3.2v-3.2h3.2z m-6.6 0v3.2h-3.4v-3.2h3.4z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Released
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <time
              class="DateTime"
              datetime="2016-12-31T11:00:00.000Z"
              title="January 1, 2017"
            >
              January 1, 2017
            </time>
          </span>
        </div>
        <div
          class="Meta ReleaseListing-length"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20.9 11.6v8.8l7.5 4.4-1.3 2.2-8.7-5.4v-10h2.5z m-0.9 21.8q5.5 0 9.4-4t4-9.4-4-9.4-9.4-4-9.4 4-4 9.4 4 9.4 9.4 4z m0-30q6.9 0 11.8 4.8t4.8 11.8-4.8 11.8-11.8 4.8-11.8-4.8-4.8-11.8 4.8-11.8 11.8-4.8z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Length
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            5:00
          </span>
        </div>
        <div
          class="Meta ReleaseListing-genre"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 5h10v6.6h-6.6v16.8c0 3.6-3.1 6.6-6.8 6.6s-6.6-3-6.6-6.6 3-6.8 6.6-6.8c1.3 0 2.4 0.4 3.4 1v-17.6z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ReleaseListing-tracks"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m11.6 21.6v-3.2h23.4v3.2h-23.4z m0 10v-3.2h23.4v3.2h-23.4z m0-23.2h23.4v3.2h-23.4v-3.2z m-8.2 10v-1.8h5v1.6l-3.1 3.4h3.1v1.8h-5v-1.6l2.9-3.4h-2.9z m1.6-5v-5h-1.6v-1.8h3.2v6.8h-1.6z m-1.6 15v-1.8h5v6.8h-5v-1.8h3.2v-0.7h-1.6v-1.8h1.6v-0.7h-3.2z"
              />
            </g>
          </svg>
            
          <span
            class="Meta-value"
          >
            4 
            <span>
              tracks
            </span>
          </span>
        </div>
      </section>
    </div>
    <img
      alt="title"
      src="images 1 imageUrl"
    />
  </a>
</article>
`;

exports[`[components] <ReleaseListing /> renders correctly with minimum props 1`] = `
<article
  class="ReleaseListing"
>
  <a
    href="/releases/slug"
  >
    <div
      class="ReleaseListing-details"
    >
      <header
        class="ReleaseListing-header"
      >
        <h3>
          <span>
            title
          </span>
        </h3>
      </header>
      <section
        class="ReleaseListing-meta"
      >
        <div
          class="Meta ReleaseListing-releasedOn"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m31.6 33.4v-18.4h-23.2v18.4h23.2z m0-26.8c1.8 0 3.4 1.6 3.4 3.4v23.4c0 1.8-1.6 3.2-3.4 3.2h-23.2c-1.9 0-3.4-1.4-3.4-3.2v-23.4c0-1.8 1.5-3.4 3.4-3.4h1.6v-3.2h3.4v3.2h13.2v-3.2h3.4v3.2h1.6z m-3.2 11.8v3.2h-3.4v-3.2h3.4z m-6.8 0v3.2h-3.2v-3.2h3.2z m-6.6 0v3.2h-3.4v-3.2h3.4z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Released
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <time
              class="DateTime"
              datetime="2016-12-31T11:00:00.000Z"
              title="January 1, 2017"
            >
              January 1, 2017
            </time>
          </span>
        </div>
        <div
          class="Meta ReleaseListing-length"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20.9 11.6v8.8l7.5 4.4-1.3 2.2-8.7-5.4v-10h2.5z m-0.9 21.8q5.5 0 9.4-4t4-9.4-4-9.4-9.4-4-9.4 4-4 9.4 4 9.4 9.4 4z m0-30q6.9 0 11.8 4.8t4.8 11.8-4.8 11.8-11.8 4.8-11.8-4.8-4.8-11.8 4.8-11.8 11.8-4.8z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Length
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            5:00
          </span>
        </div>
        <div
          class="Meta ReleaseListing-genre"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 5h10v6.6h-6.6v16.8c0 3.6-3.1 6.6-6.8 6.6s-6.6-3-6.6-6.6 3-6.8 6.6-6.8c1.3 0 2.4 0.4 3.4 1v-17.6z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ReleaseListing-tracks"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align:middle"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m11.6 21.6v-3.2h23.4v3.2h-23.4z m0 10v-3.2h23.4v3.2h-23.4z m0-23.2h23.4v3.2h-23.4v-3.2z m-8.2 10v-1.8h5v1.6l-3.1 3.4h3.1v1.8h-5v-1.6l2.9-3.4h-2.9z m1.6-5v-5h-1.6v-1.8h3.2v6.8h-1.6z m-1.6 15v-1.8h5v6.8h-5v-1.8h3.2v-0.7h-1.6v-1.8h1.6v-0.7h-3.2z"
              />
            </g>
          </svg>
            
          <span
            class="Meta-value"
          >
            1 
            <span>
              track
            </span>
          </span>
        </div>
      </section>
    </div>
    <img
      alt="title"
      src="images 1 imageUrl"
    />
  </a>
</article>
`;

exports[`[components] <ReleaseListing /> updates \`isImageLoaded\` state when image has previously been loaded 1`] = `
<article
  class="ReleaseListing isRendered"
>
  <a
    href="/releases/slug"
  >
    <div
      class="ReleaseListing-details"
    >
      <header
        class="ReleaseListing-header"
      >
        <h3>
          <span>
            title
          </span>
        </h3>
      </header>
      <section
        class="ReleaseListing-meta"
      >
        <div
          class="Meta ReleaseListing-releasedOn"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m31.6 33.4v-18.4h-23.2v18.4h23.2z m0-26.8c1.8 0 3.4 1.6 3.4 3.4v23.4c0 1.8-1.6 3.2-3.4 3.2h-23.2c-1.9 0-3.4-1.4-3.4-3.2v-23.4c0-1.8 1.5-3.4 3.4-3.4h1.6v-3.2h3.4v3.2h13.2v-3.2h3.4v3.2h1.6z m-3.2 11.8v3.2h-3.4v-3.2h3.4z m-6.8 0v3.2h-3.2v-3.2h3.2z m-6.6 0v3.2h-3.4v-3.2h3.4z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Released
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <time
              class="DateTime"
              datetime="2016-12-31T11:00:00.000Z"
              title="January 1, 2017"
            >
              January 1, 2017
            </time>
          </span>
        </div>
        <div
          class="Meta ReleaseListing-length"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20.9 11.6v8.8l7.5 4.4-1.3 2.2-8.7-5.4v-10h2.5z m-0.9 21.8q5.5 0 9.4-4t4-9.4-4-9.4-9.4-4-9.4 4-4 9.4 4 9.4 9.4 4z m0-30q6.9 0 11.8 4.8t4.8 11.8-4.8 11.8-11.8 4.8-11.8-4.8-4.8-11.8 4.8-11.8 11.8-4.8z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Length
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            5:00
          </span>
        </div>
        <div
          class="Meta ReleaseListing-genre"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 5h10v6.6h-6.6v16.8c0 3.6-3.1 6.6-6.8 6.6s-6.6-3-6.6-6.6 3-6.8 6.6-6.8c1.3 0 2.4 0.4 3.4 1v-17.6z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ReleaseListing-tracks"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m11.6 21.6v-3.2h23.4v3.2h-23.4z m0 10v-3.2h23.4v3.2h-23.4z m0-23.2h23.4v3.2h-23.4v-3.2z m-8.2 10v-1.8h5v1.6l-3.1 3.4h3.1v1.8h-5v-1.6l2.9-3.4h-2.9z m1.6-5v-5h-1.6v-1.8h3.2v6.8h-1.6z m-1.6 15v-1.8h5v6.8h-5v-1.8h3.2v-0.7h-1.6v-1.8h1.6v-0.7h-3.2z"
              />
            </g>
          </svg>
            
          <span
            class="Meta-value"
          >
            1 
            <span>
              track
            </span>
          </span>
        </div>
      </section>
    </div>
    <img
      alt="title"
      src="images 1 imageUrl"
    />
  </a>
</article>
`;

exports[`[components] <ReleaseListing /> updates \`isRendered\` state after image has loaded 1`] = `
<article
  class="ReleaseListing isRendered"
>
  <a
    href="/releases/slug"
  >
    <div
      class="ReleaseListing-details"
    >
      <header
        class="ReleaseListing-header"
      >
        <h3>
          <span>
            title
          </span>
        </h3>
      </header>
      <section
        class="ReleaseListing-meta"
      >
        <div
          class="Meta ReleaseListing-releasedOn"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m31.6 33.4v-18.4h-23.2v18.4h23.2z m0-26.8c1.8 0 3.4 1.6 3.4 3.4v23.4c0 1.8-1.6 3.2-3.4 3.2h-23.2c-1.9 0-3.4-1.4-3.4-3.2v-23.4c0-1.8 1.5-3.4 3.4-3.4h1.6v-3.2h3.4v3.2h13.2v-3.2h3.4v3.2h1.6z m-3.2 11.8v3.2h-3.4v-3.2h3.4z m-6.8 0v3.2h-3.2v-3.2h3.2z m-6.6 0v3.2h-3.4v-3.2h3.4z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Released
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <time
              class="DateTime"
              datetime="2016-12-31T11:00:00.000Z"
              title="January 1, 2017"
            >
              January 1, 2017
            </time>
          </span>
        </div>
        <div
          class="Meta ReleaseListing-length"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20.9 11.6v8.8l7.5 4.4-1.3 2.2-8.7-5.4v-10h2.5z m-0.9 21.8q5.5 0 9.4-4t4-9.4-4-9.4-9.4-4-9.4 4-4 9.4 4 9.4 9.4 4z m0-30q6.9 0 11.8 4.8t4.8 11.8-4.8 11.8-11.8 4.8-11.8-4.8-4.8-11.8 4.8-11.8 11.8-4.8z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Length
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            5:00
          </span>
        </div>
        <div
          class="Meta ReleaseListing-genre"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m20 5h10v6.6h-6.6v16.8c0 3.6-3.1 6.6-6.8 6.6s-6.6-3-6.6-6.6 3-6.8 6.6-6.8c1.3 0 2.4 0.4 3.4 1v-17.6z"
              />
            </g>
          </svg>
           
          <span
            class="Meta-label"
          >
            <span>
              Genre
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            genre
          </span>
        </div>
        <div
          class="Meta ReleaseListing-tracks"
        >
          <svg
            fill="currentColor"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            style="vertical-align: middle;"
            viewBox="0 0 40 40"
            width="1em"
          >
            <g>
              <path
                d="m11.6 21.6v-3.2h23.4v3.2h-23.4z m0 10v-3.2h23.4v3.2h-23.4z m0-23.2h23.4v3.2h-23.4v-3.2z m-8.2 10v-1.8h5v1.6l-3.1 3.4h3.1v1.8h-5v-1.6l2.9-3.4h-2.9z m1.6-5v-5h-1.6v-1.8h3.2v6.8h-1.6z m-1.6 15v-1.8h5v6.8h-5v-1.8h3.2v-0.7h-1.6v-1.8h1.6v-0.7h-3.2z"
              />
            </g>
          </svg>
            
          <span
            class="Meta-value"
          >
            1 
            <span>
              track
            </span>
          </span>
        </div>
      </section>
    </div>
    <img
      alt="title"
      src="images 1 imageUrl"
    />
  </a>
</article>
`;
